# TinkerTanker_Bootcamp

./: CMakeLists.txt  README.md  map.yaml
certs/: selfsigned-client-crt.pem  selfsigned-client-key.pem  trusted-ca-crt.pem  trusted-ca-crt.srl  trusted-ca-key.pem  trusted-client-crt.pem  trusted-client-key.pem  trusted-server-crt.pem  trusted-server-key.pem  untrusted-ca-crt.pem  untrusted-ca-crt.srl  untrusted-ca-key.pem  untrusted-client-crt.pem  untrusted-client-key.pem
config/: game_constants.json  invalid_json_example.json  map.yaml  map_config.json  plan.txt  player_keys.json  resource_config.json
include/: base_types.h  bot.h  distances_bfs.h  grid.h  map.h  meet_in_the_middle.h  meet_in_the_middleINLINES.cc  player.h  priority_queue.h  priority_queue.tpp  queue_bfs.h  random_generators.h  resource_loc.h  resource_manager.h  ringbuffer.h  ringbuffer.tpp  scan_manager.h  sim.h  utils.h
include/client/: connection.h
include/gui/: bot.h  cell.h  constants.h  get_updates.h  gui.h  map.h  variable.h
include/json/: action.h  action_build_bot.h  action_cancel_job_request.h  action_explode_request.h  action_mine_request.h  action_move_request.h  action_response.h  action_scan_request.h  action_transfer_request.h  bot_update.h  client_subscribe_request.h  client_subscribe_response.h  create_map_request.h  error.h  error_response.h  extra_config.h  game_constants.h  game_status.h  game_update.h  get_games_response.h  job_status.h  job_update.h  join_game_request.h  join_game_response.h  land_update.h  map_config.h  observer_subscribe_request.h  observer_subscribe_response.h  open_games.h  player_info.h  position.h  resource_chunk.h  resource_config.h  server_config.h  server_hello.h  target.h  terrain.h  terrain_config.h  update.h  update_type.h  (+1 more)
src/: bot.cc  client_main.cc  distances_bfs.cc  map.cc  player.cc  resource_loc.cc  resource_manager.cc  scan_manager.cc  sim.cc
src/client/: connection.cc
src/gui/: get_updates.cc  gui.cc  gui_main.cc  map.cc  updatelist.txt
test/: test_1.cc
